--- a/order.html
+++ b/order.html
@@ -46,10 +46,13 @@
                   <div class="card shadow-sm">
                     <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/4.jpg" alt="">
                     <div class="card-body">
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><p>Hyderabad Dum Biryani</p>&#8377; 249 /-<p></p></p>
                       <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-lg btn-outline-primary">View</button>
+                          <button type="button" class="btn btn-lg btn-outline-primary">Buy</button>
+                        </div>
+                        <div class="btn-group">
+                          <button type="button" class="btn btn-lg btn-outline-primary">Add To Cart</button>
                         </div>
                       </div>
                     </div>
@@ -59,10 +62,13 @@
                   <div class="card shadow-sm">
                     <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/5.jpg" alt="">
                     <div class="card-body">
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><p>Hyderabad Dum Biryani</p>&#8377; 249 /-<p></p></p>
                       <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-lg btn-outline-primary">View</button>
+                          <button type="button" class="btn btn-lg btn-outline-primary">Buy</button>
+                        </div>
+                        <div class="btn-group">
+                          <button type="button" class="btn btn-lg btn-outline-primary">Add To Cart</button>
                         </div>
                       </div>
                     </div>
@@ -72,10 +78,13 @@
                   <div class="card shadow-sm">
                     <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/6.jpg" alt="">
                     <div class="card-body">
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><p>Hyderabad Dum Biryani</p>&#8377; 249 /-<p></p>
                       <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-lg btn-outline-primary">View</button>
+                          <button type="button" class="btn btn-lg btn-outline-primary">Buy</button>
+                        </div>
+                        <div class="btn-group">
+                          <button type="button" class="btn btn-lg btn-outline-primary">Add To Cart</button>
                         </div>
                       </div>
                     </div>
@@ -86,10 +95,13 @@
                   <div class="card shadow-sm">
                     <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/7.jpg" alt="">
                     <div class="card-body">
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><p>Hyderabad Dum Biryani</p>&#8377; 249 /-<p></p>
                       <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-lg btn-outline-primary">View</button>
+                          <button type="button" class="btn btn-lg btn-outline-primary">Buy</button>
+                        </div>
+                        <div class="btn-group">
+                          <button type="button" class="btn btn-lg btn-outline-primary">Add To Cart</button>
                         </div>
                       </div>
                     </div>
@@ -99,10 +111,13 @@
                   <div class="card shadow-sm">
                     <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/8.jpg" alt="">
                     <div class="card-body">
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><p>Hyderabad Dum Biryani</p>&#8377; 249 /-<p></p>
                       <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-lg btn-outline-primary">View</button>
+                          <button type="button" class="btn btn-lg btn-outline-primary">Buy</button>
+                        </div>
+                        <div class="btn-group">
+                          <button type="button" class="btn btn-lg btn-outline-primary">Add To Cart</button>
                         </div>
                       </div>
                     </div>
@@ -112,10 +127,13 @@
                   <div class="card shadow-sm">
                     <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/9.jpg" alt="">
                     <div class="card-body">
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><p>Hyderabad Dum Biryani</p>&#8377; 249 /-<p></p>
                       <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-lg btn-outline-primary">View</button>
+                          <button type="button" class="btn btn-lg btn-outline-primary">Buy</button>
+                        </div>
+                        <div class="btn-group">
+                          <button type="button" class="btn btn-lg btn-outline-primary">Add To Cart</button>
                         </div>
                       </div>
                     </div>
@@ -124,12 +142,15 @@
 
                 <div class="col">
                     <div class="card shadow-sm">
-                      <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/7.jpg" alt="">
+                      <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/10.jpg" alt="">
                       <div class="card-body">
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><p>Hyderabad Dum Biryani</p>&#8377; 249 /-<p></p>
                         <div class="d-flex justify-content-between align-items-center">
                           <div class="btn-group">
-                            <button type="button" class="btn btn-lg btn-outline-primary">View</button>
+                            <button type="button" class="btn btn-lg btn-outline-primary">Buy</button>
+                          </div>
+                          <div class="btn-group">
+                            <button type="button" class="btn btn-lg btn-outline-primary">Add To Cart</button>
                           </div>
                         </div>
                       </div>
@@ -137,12 +158,15 @@
                   </div>
                   <div class="col">
                     <div class="card shadow-sm">
-                      <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/5.jpg" alt="">
+                      <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/11.jpg" alt="">
                       <div class="card-body">
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><p>Hyderabad Dum Biryani</p>&#8377; 249 /-<p></p>
                         <div class="d-flex justify-content-between align-items-center">
                           <div class="btn-group">
-                            <button type="button" class="btn btn-lg btn-outline-primary">View</button>
+                            <button type="button" class="btn btn-lg btn-outline-primary">Buy</button>
+                          </div>
+                          <div class="btn-group">
+                            <button type="button" class="btn btn-lg btn-outline-primary">Add To Cart</button>
                           </div>
                         </div>
                       </div>
@@ -150,12 +174,15 @@
                   </div>
                   <div class="col">
                     <div class="card shadow-sm">
-                      <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/6.jpg" alt="">
+                      <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/12.jpg" alt="">
                       <div class="card-body">
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><p>Hyderabad Dum Biryani</p>&#8377; 249 /-<p></p>
                         <div class="d-flex justify-content-between align-items-center">
                           <div class="btn-group">
-                            <button type="button" class="btn btn-lg btn-outline-primary">View</button>
+                            <button type="button" class="btn btn-lg btn-outline-primary">Buy</button>
+                          </div>
+                          <div class="btn-group">
+                            <button type="button" class="btn btn-lg btn-outline-primary">Add To Cart</button>
                           </div>
                         </div>
                       </div>
