--- a/cart.html
+++ b/cart.html
@@ -21,9 +21,9 @@
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
           <li><a href="./index.html" class="nav-link px-2 text-white">Home</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">OrderNow</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">ContactUs</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+          <li><a href="/order.html" class="nav-link px-2 text-white">OrderNow</a></li>
+          <li><a href="contact.html" class="nav-link px-2 text-white">ContactUs</a></li>
+          <li><a href="about.html" class="nav-link px-2 text-white">About</a></li>
         </ul>
 
         <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
@@ -32,6 +32,7 @@
         </form>
 
         <div class="text-end">
+          <a href="/cart.html"><img src="/img/cart.png" alt="Brand LOGO" class="bi me-2" width="50" height="50" role="img" aria-label="Bootstrap"></a>
           <button type="button" class="btn btn-outline-light me-2">Login</button>
           <button type="button" class="btn btn-warning">Sign-up</button>
         </div>
