--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <img src="/img/1.jpg" class="d-block w-100 custom" alt="food" height="700">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                  <p>Some representative placeholder content for the second slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
