completed the design portion

--- a/about.html
+++ b/about.html
@@ -53,7 +53,8 @@
     </div>
   </header>
   <main class="custom3 d-flex justify-content-center align-items-center">
-    <div><h1>DEAR CUSTOMERS, WE ARE HAPPY TO SEE YOU HERE</h1><br>
+    <div><h1 style="text-decoration: underline;">About Us</h1><br>
+    <h3>DEAR CUSTOMERS, WE ARE HAPPY TO SEE YOU HERE</h3><br>
     <P><abbr title="Nikhil Pandravesham">NP</abbr> is a food delivery and restaurant discovery platform that operates in multiple countries around the world. The company was founded in 2020 by Nikhil Pandravesham in Delhi, India, and has since grown to become a leading player in the online food delivery space. In addition to facilitating food delivery from local restaurants, <abbr title="Nikhil Pandravesham">NP</abbr> also offers a platform for users to discover and rate restaurants, as well as book tables at participating restaurants. The company's services are available through its website and mobile app. <abbr title="Nikhil Pandravesham">NP</abbr> has expanded its operations to a number of countries in Asia, Europe, and the Middle East, and has also diversified into other areas such as cloud kitchen operations and cashless payments</P>
   </main>
   </div>
