--- a/index.html
+++ b/index.html
@@ -78,82 +78,82 @@
           </div>
           <br>
          <div class="container">
-            <h2 class="d-flex justify-content-center align-items-center customh2">Order Now</h2><br>
+            <h2 class="d-flex justify-content-center align-items-center customh2 ctran_1">Order Now</h2><br>
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                <div class="col">
+                <div class="col ctran">
                   <div class="card shadow-sm">
                     <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/4.jpg" alt="">
                     <div class="card-body">
                       <p class="card-text">Veg Sandwich With extra added flavours</p>
                       <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-lg btn-outline-primary"><a href="/order.html" style="text-decoration: none;"> View</a></button>
+                          <button type="button" class="btn btn-lg btn-outline-primary"><a class="customBtnColor" href="/order.html" style="text-decoration: none;"> View</a></button>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col ctran">
                   <div class="card shadow-sm">
                     <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/5.jpg" alt="">
                     <div class="card-body">
                       <p class="card-text">Heaven for Veg Foodies</p>
                       <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-lg btn-outline-primary"><a href="/order.html" style="text-decoration: none;"> View</a></button>
+                          <button type="button" class="btn btn-lg btn-outline-primary"><a class="customBtnColor" href="/order.html" style="text-decoration: none;"> View</a></button>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col ctran">
                   <div class="card shadow-sm">
                     <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/6.jpg" alt="">
                     <div class="card-body">
                       <p class="card-text">Disney world for dessert lovers and children</p>
                       <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-lg btn-outline-primary"><a href="/order.html" style="text-decoration: none;"> View</a></button>
+                          <button type="button" class="btn btn-lg btn-outline-primary"><a class="customBtnColor" href="/order.html" style="text-decoration: none;"> View</a></button>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
         
-                <div class="col">
+                <div class="col ctran">
                   <div class="card shadow-sm">
                     <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/7.jpg" alt="">
                     <div class="card-body">
                       <p class="card-text">Mixed fruit IceCream with natural ingredients</p>
                       <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-lg btn-outline-primary"><a href="/order.html" style="text-decoration: none;"> View</a></button>
+                          <button type="button" class="btn btn-lg btn-outline-primary"><a class="customBtnColor" href="/order.html" style="text-decoration: none;"> View</a></button>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col ctran">
                   <div class="card shadow-sm">
                     <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/8.jpg" alt="">
                     <div class="card-body">
                       <p class="card-text">South Indian masala food with strong taste of spices</p>
                       <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-lg btn-outline-primary"><a href="/order.html" style="text-decoration: none"> View</a></button>
+                          <button type="button" class="btn btn-lg btn-outline-primary"><a class="customBtnColor" href="/order.html" style="text-decoration: none"> View</a></button>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col ctran">
                   <div class="card shadow-sm">
                     <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/9.jpg" alt="">
                     <div class="card-body">
                       <p class="card-text">North Indian Cuisine</p>
                       <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-lg btn-outline-primary"><a href="/order.html" style="text-decoration: none;"> View</a></button>
+                          <button type="button" class="btn btn-lg btn-outline-primary"><a class="customBtnColor" href="/order.html" style="text-decoration: none;"> View</a></button>
                         </div>
                       </div>
                     </div>
