--- a/order.html
+++ b/order.html
@@ -50,7 +50,7 @@
               <p class="card-text">
               <p>Hyderabad Dum Biryani</p>
               <p><select name="quantity" id="quantity">
-                <option value=" ">select the no.of items</option>
+                <option value=" ">select quantity </option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -64,7 +64,7 @@
                   <button type="button" class="btn btn-lg btn-outline-primary">Buy</button>
                 </div>
                 <div class="btn-group">
-                  <button type="button" class="btn btn-lg btn-outline-primary">Add To Cart</button>
+                  <button type="button" class="btn btn-lg btn-outline-primary" onclick="addItemsTocart()">Add To Cart</button>
                 </div>
               </div>
             </div>
@@ -77,7 +77,7 @@
               <p class="card-text">
               <p>Hyderabad Dum Biryani</p>
               <p><select name="quantity" id="quantity">
-                  <option value=" ">select the no.of items</option>
+                  <option value=" ">select quantity</option>
                   <option value="1">1</option>
                   <option value="2">2</option>
                   <option value="3">3</option>
@@ -104,7 +104,7 @@
               <p class="card-text">
               <p>Hyderabad Dum Biryani</p>
               <p><select name="quantity" id="quantity">
-                  <option value=" ">select the no.of items</option>
+                  <option value=" ">select quantity</option>
                   <option value="1">1</option>
                   <option value="2">2</option>
                   <option value="3">3</option>
@@ -131,7 +131,7 @@
               <p class="card-text">
               <p>Hyderabad Dum Biryani</p>
               <p><select name="quantity" id="quantity">
-                  <option value=" ">select the no.of items</option>
+                  <option value=" ">select quantity</option>
                   <option value="1">1</option>
                   <option value="2">2</option>
                   <option value="3">3</option>
@@ -157,7 +157,7 @@
               <p class="card-text">
               <p>Hyderabad Dum Biryani</p>
               <p><select name="quantity" id="quantity">
-                <option value=" ">select the no.of items</option>
+                <option value=" ">select quantity</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -183,7 +183,7 @@
               <p class="card-text">
               <p>Hyderabad Dum Biryani</p>
               <p><select name="quantity" id="quantity">
-                <option value=" ">select the no.of items</option>
+                <option value=" ">select quantity</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -210,7 +210,7 @@
               <p class="card-text">
               <p>Hyderabad Dum Biryani</p>
               <p><select name="quantity" id="quantity">
-                <option value=" ">select the no.of items</option>
+                <option value=" ">select quantity</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -236,7 +236,7 @@
               <p class="card-text">
               <p>Hyderabad Dum Biryani</p>
               <p><select name="quantity" id="quantity">
-                <option value=" ">select the no.of items</option>
+                <option value=" ">select quantity</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -262,7 +262,7 @@
               <p class="card-text">
               <p>Hyderabad Dum Biryani</p>
               <p><select name="quantity" id="quantity">
-                <option value=" ">select the no.of items</option>
+                <option value=" ">select quantity</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -285,6 +285,7 @@
     </div>
 
   </main>
+  <script src="/engine.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
