Images are displayed correctly

--- a/about.html
+++ b/about.html
@@ -28,24 +28,24 @@
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-          <img src="/img/LOGO.png" alt="Brand LOGO" class="bi me-2" width="50" height="50" role="img"
+          <img src="img/LOGO.png" alt="Brand LOGO" class="bi me-2" width="50" height="50" role="img"
             aria-label="Bootstrap">
         </a>
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="./index.html" class="nav-link px-2 text-white">Home</a></li>
-          <li><a href="/order.html" class="nav-link px-2 text-white">OrderNow</a></li>
-          <li><a href="/contact.html" class="nav-link px-2 text-white">ContactUs</a></li>
-          <li><a href="/about.html" class="nav-link px-2 text-white">About</a></li>
+          <li><a href="index.html" class="nav-link px-2 text-white">Home</a></li>
+          <li><a href="order.html" class="nav-link px-2 text-white">OrderNow</a></li>
+          <li><a href="contact.html" class="nav-link px-2 text-white">ContactUs</a></li>
+          <li><a href="about.html" class="nav-link px-2 text-white">About</a></li>
         </ul>
 
-        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-          <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..."
+        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 d-flex justify-content-center align-items-center" role="search">
+          <label for="search">Search </label><input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..."
             aria-label="Search">
         </form>
 
         <div class="text-end">
-          <a href="/cart.html"><img src="/img/cart.png" alt="Brand LOGO" class="bi me-2" width="50" height="50" role="img" aria-label="Bootstrap"></a>
+          <a href="/cart.html"><img src="img/cart.png" alt="Brand LOGO" class="bi me-2" width="50" height="50" role="img" aria-label="Bootstrap"></a>
           <button type="button" class="btn btn-outline-light me-2">Login</button>
           <button type="button" class="btn btn-warning">Sign-up</button>
         </div>
