--- a/order.html
+++ b/order.html
@@ -15,37 +15,38 @@
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-          <img src="/img/LOGO.png" alt="Brand LOGO" class="bi me-2" width="50" height="50" role="img"
+          <img src="img/LOGO.png" alt="Brand LOGO" class="bi me-2" width="50" height="50" role="img"
             aria-label="Bootstrap">
         </a>
 
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="/index.html" class="nav-link px-2 text-white">Home</a></li>
-          <li><a href="/order.html" class="nav-link px-2 text-white">OrderNow</a></li>
-          <li><a href="/contact.html" class="nav-link px-2 text-white">ContactUs</a></li>
-          <li><a href="/about.html" class="nav-link px-2 text-white">About</a></li>
+          <li><a href="index.html" class="nav-link px-2 text-white">Home</a></li>
+          <li><a href="order.html" class="nav-link px-2 text-white">OrderNow</a></li>
+          <li><a href="contact.html" class="nav-link px-2 text-white">ContactUs</a></li>
+          <li><a href="about.html" class="nav-link px-2 text-white">About</a></li>
         </ul>
 
-        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-          <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..."
+        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3 d-flex justify-content-center align-items-center" role="search">
+          <label for="search">Search </label><input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..."
             aria-label="Search">
         </form>
 
         <div class="text-end">
-          <a href="/cart.html"><img src="/img/cart.png" alt="Brand LOGO" class="bi me-2" width="50" height="50" role="img" aria-label="Bootstrap"></a>
+          <a href="/cart.html"><img src="img/cart.png" alt="Brand LOGO" class="bi me-2" width="50" height="50" role="img" aria-label="Bootstrap"></a>
           <button type="button" class="btn btn-outline-light me-2">Login</button>
           <button type="button" class="btn btn-warning">Sign-up</button>
         </div>
       </div>
     </div>
   </header>
+
   <main class="my-5">
     <div class="container">
       <h1 class="d-flex justify-content-center align-items-center customh2">Order Now</h1><br>
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/4.jpg" alt="">
+            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="img/4.jpg" alt="">
             <div class="card-body">
               <p class="card-text">
               <p>Hyderabad Dum Biryani</p>
@@ -72,7 +73,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/5.jpg" alt="">
+            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="img/5.jpg" alt="">
             <div class="card-body">
               <p class="card-text">
               <p>Hyderabad Dum Biryani</p>
@@ -99,7 +100,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/6.jpg" alt="">
+            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="img/6.jpg" alt="">
             <div class="card-body">
               <p class="card-text">
               <p>Hyderabad Dum Biryani</p>
@@ -126,7 +127,7 @@
 
         <div class="col">
           <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/7.jpg" alt="">
+            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="img/7.jpg" alt="">
             <div class="card-body">
               <p class="card-text">
               <p>Hyderabad Dum Biryani</p>
@@ -152,7 +153,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/8.jpg" alt="">
+            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="img/8.jpg" alt="">
             <div class="card-body">
               <p class="card-text">
               <p>Hyderabad Dum Biryani</p>
@@ -178,7 +179,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/9.jpg" alt="">
+            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="img/9.jpg" alt="">
             <div class="card-body">
               <p class="card-text">
               <p>Hyderabad Dum Biryani</p>
@@ -205,7 +206,7 @@
 
         <div class="col">
           <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/10.jpg" alt="">
+            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="img/10.jpg" alt="">
             <div class="card-body">
               <p class="card-text">
               <p>Hyderabad Dum Biryani</p>
@@ -231,7 +232,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/11.jpg" alt="">
+            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="img/11.jpg" alt="">
             <div class="card-body">
               <p class="card-text">
               <p>Hyderabad Dum Biryani</p>
@@ -257,7 +258,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/img/12.jpg" alt="">
+            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="img/12.jpg" alt="">
             <div class="card-body">
               <p class="card-text">
               <p>Hyderabad Dum Biryani</p>
