view button in index.html is working

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                       <p class="card-text">Veg Sandwich With extra added flavours</p>
                       <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-lg btn-outline-primary"><a class="customBtnColor" href="/order.html" style="text-decoration: none;"> View</a></button>
+                          <button type="button" class="btn btn-lg btn-outline-primary"><a class="customBtnColor" href="order.html" style="text-decoration: none;"> View</a></button>
                         </div>
                       </div>
                     </div>
@@ -100,7 +100,7 @@
                       <p class="card-text">Heaven for Veg Foodies</p>
                       <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-lg btn-outline-primary"><a class="customBtnColor" href="/order.html" style="text-decoration: none;"> View</a></button>
+                          <button type="button" class="btn btn-lg btn-outline-primary"><a class="customBtnColor" href="order.html" style="text-decoration: none;"> View</a></button>
                         </div>
                       </div>
                     </div>
@@ -113,7 +113,7 @@
                       <p class="card-text">Disney world for dessert lovers and children</p>
                       <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-lg btn-outline-primary"><a class="customBtnColor" href="/order.html" style="text-decoration: none;"> View</a></button>
+                          <button type="button" class="btn btn-lg btn-outline-primary"><a class="customBtnColor" href="order.html" style="text-decoration: none;"> View</a></button>
                         </div>
                       </div>
                     </div>
@@ -127,7 +127,7 @@
                       <p class="card-text">Mixed fruit IceCream with natural ingredients</p>
                       <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-lg btn-outline-primary"><a class="customBtnColor" href="/order.html" style="text-decoration: none;"> View</a></button>
+                          <button type="button" class="btn btn-lg btn-outline-primary"><a class="customBtnColor" href="order.html" style="text-decoration: none;"> View</a></button>
                         </div>
                       </div>
                     </div>
@@ -140,7 +140,7 @@
                       <p class="card-text">South Indian masala food with strong taste of spices</p>
                       <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-lg btn-outline-primary"><a class="customBtnColor" href="/order.html" style="text-decoration: none"> View</a></button>
+                          <button type="button" class="btn btn-lg btn-outline-primary"><a class="customBtnColor" href="order.html" style="text-decoration: none"> View</a></button>
                         </div>
                       </div>
                     </div>
@@ -153,7 +153,7 @@
                       <p class="card-text">North Indian Cuisine</p>
                       <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-lg btn-outline-primary"><a class="customBtnColor" href="/order.html" style="text-decoration: none;"> View</a></button>
+                          <button type="button" class="btn btn-lg btn-outline-primary"><a class="customBtnColor" href="order.html" style="text-decoration: none;"> View</a></button>
                         </div>
                       </div>
                     </div>
